Added Reason of own library.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -182,18 +182,16 @@ variables in classes and objects,
 private inner classes,
 messages as a second argument in the Require function and more.}
 
-\todo{why does stainless use its own BigInt etc?}
-
 In addition, Stainless has its own library with annotations,
 reimplementation of some core data types, collections and input-output
-functions and more.  Some of them are described on the website in the
-section
+functions and more. \todo{Kai: check the text.
+This allows Stainless to map correctly operations 
+to mathematical function inside of SMT solver.
+Some elements of the library} are described on the website in the section
 \href{https://epfl-lara.github.io/stainless/library.html}{Stainless
   Library}.  There are more details about the library in the source
 code of Stainless on GitHub \cite{Stainless:github} in the folder
 \href{https://github.com/epfl-lara/stainless/tree/master/frontends/library/stainless}{\textit{frontends/library/stainless}}.
-
-
 
 
 
