Added text to 2.4 about Stainless integration.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -451,8 +451,13 @@ future.
 
 \subsection{Adjusting No-Inflation Property}
 
-\todo{anna: what does it mean to integrate}
-
+\todo{Kai: check the text
+In order to verify a project, Stainless must be integrated into it.
+We can integrate it in an sbt project adding the Stainless Plugin 
+and the required resolver to pugins.sbt. 
+Another option to use Stainless is to import its libraries in a program code 
+and verify a program from command line using the pre-packaged Stainless JAR file 
+or using the Stainless script built from source.}
 Trying to integrate Stainless in Bitcoin-S caused a lot of troubles,
 mainly because of version conflicts.  For more details see chapter
 \ref{chap:appendix_arb}.
