--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1978,7 +1978,9 @@ section \ref{sec:bugfix}.  Finally, our work led to some feedback to
 the Stainless developers to improve the tool.
 
 
-
+\appendix
+\section{How to Setup Stainless} 
+\section{Code Transformations} 
 
 
 
